assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 112 conflicts: 9 shift/reduce
State 139 conflicts: 9 shift/reduce
State 151 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature ';' feature_list

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' expression '}'
   10        | OBJECTID '(' formal_list_plus ')' ':' TYPEID '{' expression '}'
   11        | opt_assign
   12        | error

   13 formal_list_plus: formal
   14                 | formal ',' formal_list_plus

   15 formal: OBJECTID ':' TYPEID

   16 opt_assign: OBJECTID ':' TYPEID
   17           | OBJECTID ':' TYPEID ASSIGN expression

   18 dispatch_expression_list: expression
   19                         | expression ',' dispatch_expression_list

   20 block_expression_list: expression ';'
   21                      | error ';'
   22                      | expression ';' block_expression_list
   23                      | error ';' block_expression_list

   24 let_rec: OBJECTID ':' TYPEID IN expression
   25        | OBJECTID ':' TYPEID ASSIGN expression IN expression
   26        | OBJECTID ':' TYPEID ',' let_rec
   27        | OBJECTID ':' TYPEID ASSIGN expression ',' let_rec
   28        | error IN expression
   29        | error ',' let_rec

   30 case: OBJECTID ':' TYPEID DARROW expression ';'

   31 case_list: case
   32          | case case_list

   33 expression: OBJECTID ASSIGN expression
   34           | expression '@' TYPEID '.' OBJECTID '(' ')'
   35           | expression '.' OBJECTID '(' ')'
   36           | expression '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   37           | expression '.' OBJECTID '(' dispatch_expression_list ')'
   38           | OBJECTID '(' ')'
   39           | OBJECTID '(' dispatch_expression_list ')'
   40           | IF expression THEN expression ELSE expression FI
   41           | WHILE expression LOOP expression POOL
   42           | '{' block_expression_list '}'
   43           | LET let_rec
   44           | CASE expression OF case_list ESAC
   45           | NEW TYPEID
   46           | ISVOID expression
   47           | expression '+' expression
   48           | expression '-' expression
   49           | expression '*' expression
   50           | expression '/' expression
   51           | '~' expression
   52           | expression '<' expression
   53           | expression LE expression
   54           | expression '=' expression
   55           | NOT expression
   56           | '(' expression ')'
   57           | OBJECTID
   58           | INT_CONST
   59           | STR_CONST
   60           | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 10 34 35 36 37 38 39 56
    ')' (41) 9 10 34 35 36 37 38 39 56
    '*' (42) 49
    '+' (43) 47
    ',' (44) 14 19 26 27 29
    '-' (45) 48
    '.' (46) 34 35 36 37
    '/' (47) 50
    ':' (58) 9 10 15 16 17 24 25 26 27 30
    ';' (59) 4 5 6 8 20 21 22 23 30
    '<' (60) 52
    '=' (61) 54
    '@' (64) 34 36
    '{' (123) 4 5 9 10 42
    '}' (125) 4 5 9 10 42
    '~' (126) 51
    error (256) 6 12 21 23 28 29
    CLASS (258) 4 5
    ELSE (259) 40
    FI (260) 40
    IF (261) 40
    IN (262) 24 25 28
    INHERITS (263) 5
    LET (264) 43
    LOOP (265) 41
    POOL (266) 41
    THEN (267) 40
    WHILE (268) 41
    CASE (269) 44
    ESAC (270) 44
    OF (271) 44
    DARROW (272) 30
    NEW (273) 45
    ISVOID (274) 46
    STR_CONST <symbol> (275) 59
    INT_CONST <symbol> (276) 58
    BOOL_CONST <boolean> (277) 60
    TYPEID <symbol> (278) 4 5 9 10 15 16 17 24 25 26 27 30 34 36 45
    OBJECTID <symbol> (279) 9 10 15 16 17 24 25 26 27 30 33 34 35 36 37 38 39 57
    ASSIGN (280) 17 25 27 33
    NOT (281) 55
    LE (282) 53
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (50)
        on left: 9 10 11 12
        on right: 8
    formal_list_plus <formals> (51)
        on left: 13 14
        on right: 10 14
    formal <formal> (52)
        on left: 15
        on right: 13 14
    opt_assign <feature> (53)
        on left: 16 17
        on right: 11
    dispatch_expression_list <expressions> (54)
        on left: 18 19
        on right: 19 36 37 39
    block_expression_list <expressions> (55)
        on left: 20 21 22 23
        on right: 22 23 42
    let_rec <expression> (56)
        on left: 24 25 26 27 28 29
        on right: 26 27 29 43
    case <case_> (57)
        on left: 30
        on right: 31 32
    case_list <cases> (58)
        on left: 31 32
        on right: 32 44
    expression <expression> (59)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 9 10 17 18 19 20 22 24 25 27 28 30 33 34 35 36 37 40 41 44 46 47 48 49 50 51 52 53 54 55 56


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (feature_list)

    feature_list  go to state 15
    feature       go to state 16
    opt_assign    go to state 17


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 18


State 13

   12 feature: error .

    $default  reduce using rule 12 (feature)


State 14

    9 feature: OBJECTID . '(' ')' ':' TYPEID '{' expression '}'
   10        | OBJECTID . '(' formal_list_plus ')' ':' TYPEID '{' expression '}'
   16 opt_assign: OBJECTID . ':' TYPEID
   17           | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 19
    ':'  shift, and go to state 20


State 15

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 21


State 16

    8 feature_list: feature . ';' feature_list

    ';'  shift, and go to state 22


State 17

   11 feature: opt_assign .

    $default  reduce using rule 11 (feature)


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (feature_list)

    feature_list  go to state 23
    feature       go to state 16
    opt_assign    go to state 17


State 19

    9 feature: OBJECTID '(' . ')' ':' TYPEID '{' expression '}'
   10        | OBJECTID '(' . formal_list_plus ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 24
    ')'       shift, and go to state 25

    formal_list_plus  go to state 26
    formal            go to state 27


State 20

   16 opt_assign: OBJECTID ':' . TYPEID
   17           | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 28


State 21

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


State 22

    8 feature_list: feature ';' . feature_list

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (feature_list)

    feature_list  go to state 30
    feature       go to state 16
    opt_assign    go to state 17


State 23

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 31


State 24

   15 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 25

    9 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 33


State 26

   10 feature: OBJECTID '(' formal_list_plus . ')' ':' TYPEID '{' expression '}'

    ')'  shift, and go to state 34


State 27

   13 formal_list_plus: formal .
   14                 | formal . ',' formal_list_plus

    ','  shift, and go to state 35

    $default  reduce using rule 13 (formal_list_plus)


State 28

   16 opt_assign: OBJECTID ':' TYPEID .
   17           | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 36

    $default  reduce using rule 16 (opt_assign)


State 29

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 30

    8 feature_list: feature ';' feature_list .

    $default  reduce using rule 8 (feature_list)


State 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 37


State 32

   15 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 33

    9 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 39


State 34

   10 feature: OBJECTID '(' formal_list_plus ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 40


State 35

   14 formal_list_plus: formal ',' . formal_list_plus

    OBJECTID  shift, and go to state 24

    formal_list_plus  go to state 41
    formal            go to state 27


State 36

   17 opt_assign: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 56


State 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 38

   15 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal)


State 39

    9 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 57


State 40

   10 feature: OBJECTID '(' formal_list_plus ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 58


State 41

   14 formal_list_plus: formal ',' formal_list_plus .

    $default  reduce using rule 14 (formal_list_plus)


State 42

   40 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 59


State 43

   43 expression: LET . let_rec

    error     shift, and go to state 60
    OBJECTID  shift, and go to state 61

    let_rec  go to state 62


State 44

   41 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 63


State 45

   44 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 64


State 46

   45 expression: NEW . TYPEID

    TYPEID  shift, and go to state 65


State 47

   46 expression: ISVOID . expression

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 66


State 48

   59 expression: STR_CONST .

    $default  reduce using rule 59 (expression)


State 49

   58 expression: INT_CONST .

    $default  reduce using rule 58 (expression)


State 50

   60 expression: BOOL_CONST .

    $default  reduce using rule 60 (expression)


State 51

   33 expression: OBJECTID . ASSIGN expression
   38           | OBJECTID . '(' ')'
   39           | OBJECTID . '(' dispatch_expression_list ')'
   57           | OBJECTID .

    ASSIGN  shift, and go to state 67
    '('     shift, and go to state 68

    $default  reduce using rule 57 (expression)


State 52

   55 expression: NOT . expression

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 69


State 53

   51 expression: '~' . expression

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 70


State 54

   42 expression: '{' . block_expression_list '}'

    error       shift, and go to state 71
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    block_expression_list  go to state 72
    expression             go to state 73


State 55

   56 expression: '(' . expression ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 74


State 56

   17 opt_assign: OBJECTID ':' TYPEID ASSIGN expression .
   34 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   35           | expression . '.' OBJECTID '(' ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   37           | expression . '.' OBJECTID '(' dispatch_expression_list ')'
   47           | expression . '+' expression
   48           | expression . '-' expression
   49           | expression . '*' expression
   50           | expression . '/' expression
   52           | expression . '<' expression
   53           | expression . LE expression
   54           | expression . '=' expression

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 17 (opt_assign)


State 57

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 84


State 58

   10 feature: OBJECTID '(' formal_list_plus ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 85


State 59

   34 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   35           | expression . '.' OBJECTID '(' ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   37           | expression . '.' OBJECTID '(' dispatch_expression_list ')'
   40           | IF expression . THEN expression ELSE expression FI
   47           | expression . '+' expression
   48           | expression . '-' expression
   49           | expression . '*' expression
   50           | expression . '/' expression
   52           | expression . '<' expression
   53           | expression . LE expression
   54           | expression . '=' expression

    THEN  shift, and go to state 86
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


State 60

   28 let_rec: error . IN expression
   29        | error . ',' let_rec

    IN   shift, and go to state 87
    ','  shift, and go to state 88


State 61

   24 let_rec: OBJECTID . ':' TYPEID IN expression
   25        | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   26        | OBJECTID . ':' TYPEID ',' let_rec
   27        | OBJECTID . ':' TYPEID ASSIGN expression ',' let_rec

    ':'  shift, and go to state 89


State 62

   43 expression: LET let_rec .

    $default  reduce using rule 43 (expression)


State 63

   34 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   35           | expression . '.' OBJECTID '(' ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   37           | expression . '.' OBJECTID '(' dispatch_expression_list ')'
   41           | WHILE expression . LOOP expression POOL
   47           | expression . '+' expression
   48           | expression . '-' expression
   49           | expression . '*' expression
   50           | expression . '/' expression
   52           | expression . '<' expression
   53           | expression . LE expression
   54           | expression . '=' expression

    LOOP  shift, and go to state 90
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


State 64

   34 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   35           | expression . '.' OBJECTID '(' ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   37           | expression . '.' OBJECTID '(' dispatch_expression_list ')'
   44           | CASE expression . OF case_list ESAC
   47           | expression . '+' expression
   48           | expression . '-' expression
   49           | expression . '*' expression
   50           | expression . '/' expression
   52           | expression . '<' expression
   53           | expression . LE expression
   54           | expression . '=' expression

    OF   shift, and go to state 91
    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83


State 65

   45 expression: NEW TYPEID .

    $default  reduce using rule 45 (expression)


State 66
